@@ -82,6 +82,7 @@ require 'lobbyist/v2/company_transaction'
 require 'lobbyist/v2/company_user'
 require 'lobbyist/v2/company'
 require 'lobbyist/v2/contact'
+require 'lobbyist/v2/custom_invitation'
 require 'lobbyist/v2/customer_call_credit_metrics'
 require 'lobbyist/v2/customer_call_credit'
 require 'lobbyist/v2/customer_call_metrics'
