@@ -1,3 +1,4 @@
+* Added Custom Invitation proxy model for V2 API.
 * Added Review Metrics proxy model for V2 API.
 * Added Customer Call proxy model for V2 API.
 
